--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CLu3EFBr.js",
+    "file": "_app/immutable/entry/app.DGAat7Su.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.BdQDfxqH.js",
+    "file": "_app/immutable/nodes/1.zt3HOlCs.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -40,11 +40,11 @@
       "_Bij4eJoV.js",
       "_DJddhS0Y.js",
       "_DdRQWUpj.js",
-      "_sIREu3Nt.js"
+      "_CySiX-hK.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.BuM-lMd4.js",
+    "file": "_app/immutable/nodes/2.uMughuJL.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -57,7 +57,7 @@
       "_DdRQWUpj.js",
       "_cpcO81Z4.js",
       "_BclygcJX.js",
-      "_sIREu3Nt.js"
+      "_CySiX-hK.js"
     ],
     "css": [
       "_app/immutable/assets/2.DhLxnOea.css"
@@ -110,6 +110,14 @@
       "_DJddhS0Y.js"
     ]
   },
+  "_CySiX-hK.js": {
+    "file": "_app/immutable/chunks/CySiX-hK.js",
+    "name": "entry",
+    "imports": [
+      "_DJddhS0Y.js",
+      "_CizpCxGv.js"
+    ]
+  },
   "_DJddhS0Y.js": {
     "file": "_app/immutable/chunks/DJddhS0Y.js",
     "name": "runtime"
@@ -129,21 +137,13 @@
       "_DJddhS0Y.js"
     ]
   },
-  "_sIREu3Nt.js": {
-    "file": "_app/immutable/chunks/sIREu3Nt.js",
-    "name": "entry",
-    "imports": [
-      "_DJddhS0Y.js",
-      "_CizpCxGv.js"
-    ]
-  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CKcMXGo-.js",
+    "file": "_app/immutable/entry/start.BgLElW7v.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_sIREu3Nt.js"
+      "_CySiX-hK.js"
     ]
   }
 }
