fixed routing to begin page

--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DGAat7Su.js",
+    "file": "_app/immutable/entry/app.WZ1OOXGF.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.zt3HOlCs.js",
+    "file": "_app/immutable/nodes/1.CYngVe5C.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -40,11 +40,11 @@
       "_Bij4eJoV.js",
       "_DJddhS0Y.js",
       "_DdRQWUpj.js",
-      "_CySiX-hK.js"
+      "_W97eC2eg.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.uMughuJL.js",
+    "file": "_app/immutable/nodes/2.DflGsxCw.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -57,7 +57,7 @@
       "_DdRQWUpj.js",
       "_cpcO81Z4.js",
       "_BclygcJX.js",
-      "_CySiX-hK.js"
+      "_W97eC2eg.js"
     ],
     "css": [
       "_app/immutable/assets/2.DhLxnOea.css"
@@ -110,14 +110,6 @@
       "_DJddhS0Y.js"
     ]
   },
-  "_CySiX-hK.js": {
-    "file": "_app/immutable/chunks/CySiX-hK.js",
-    "name": "entry",
-    "imports": [
-      "_DJddhS0Y.js",
-      "_CizpCxGv.js"
-    ]
-  },
   "_DJddhS0Y.js": {
     "file": "_app/immutable/chunks/DJddhS0Y.js",
     "name": "runtime"
@@ -130,6 +122,14 @@
       "_Bo4J9WDE.js"
     ]
   },
+  "_W97eC2eg.js": {
+    "file": "_app/immutable/chunks/W97eC2eg.js",
+    "name": "entry",
+    "imports": [
+      "_DJddhS0Y.js",
+      "_CizpCxGv.js"
+    ]
+  },
   "_cpcO81Z4.js": {
     "file": "_app/immutable/chunks/cpcO81Z4.js",
     "name": "if",
@@ -138,12 +138,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BgLElW7v.js",
+    "file": "_app/immutable/entry/start.D62vHKgZ.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CySiX-hK.js"
+      "_W97eC2eg.js"
     ]
   }
 }
