changed font and added finale page

--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,149 +1,169 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.WZ1OOXGF.js",
+    "file": "_app/immutable/entry/app.CmXXzjKQ.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_DJddhS0Y.js",
-      "_DdRQWUpj.js",
-      "_Bo4J9WDE.js",
-      "_CizpCxGv.js",
-      "_cpcO81Z4.js"
+      "_CqYINF6l.js",
+      "_C-jxBILG.js",
+      "_BCYp_KQR.js",
+      "__KAcRfw_.js",
+      "_DKXzPwaM.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
       ".svelte-kit/generated/client-optimized/nodes/1.js",
       ".svelte-kit/generated/client-optimized/nodes/2.js",
-      ".svelte-kit/generated/client-optimized/nodes/3.js"
+      ".svelte-kit/generated/client-optimized/nodes/3.js",
+      ".svelte-kit/generated/client-optimized/nodes/4.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BdbiE7k3.js",
+    "file": "_app/immutable/nodes/0.Bf2bPG1R.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_Bo4J9WDE.js",
-      "_DJddhS0Y.js"
+      "_BCYp_KQR.js",
+      "_CqYINF6l.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CYngVe5C.js",
+    "file": "_app/immutable/nodes/1.BE3YvqDY.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_Bo4J9WDE.js",
-      "_Bij4eJoV.js",
-      "_DJddhS0Y.js",
-      "_DdRQWUpj.js",
-      "_W97eC2eg.js"
+      "_BCYp_KQR.js",
+      "_D0EhB6C6.js",
+      "_CqYINF6l.js",
+      "_C-jxBILG.js",
+      "_4gtB9ieE.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.DflGsxCw.js",
+    "file": "_app/immutable/nodes/2.Dj_FtVuO.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_Bo4J9WDE.js",
-      "_Bij4eJoV.js",
-      "_CizpCxGv.js",
-      "_DJddhS0Y.js",
-      "_DdRQWUpj.js",
-      "_cpcO81Z4.js",
-      "_BclygcJX.js",
-      "_W97eC2eg.js"
+      "_BCYp_KQR.js",
+      "_D0EhB6C6.js",
+      "__KAcRfw_.js",
+      "_CqYINF6l.js",
+      "_C-jxBILG.js",
+      "_DKXzPwaM.js",
+      "_BiC6aMCS.js",
+      "_4gtB9ieE.js"
     ],
     "css": [
       "_app/immutable/assets/2.DhLxnOea.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.BRfYD4BB.js",
+    "file": "_app/immutable/nodes/3.C2xyQ4KI.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_Bo4J9WDE.js",
-      "_Bij4eJoV.js",
-      "_CizpCxGv.js",
-      "_DJddhS0Y.js",
-      "_cpcO81Z4.js",
-      "_BclygcJX.js"
+      "_BCYp_KQR.js",
+      "_D0EhB6C6.js",
+      "__KAcRfw_.js",
+      "_CqYINF6l.js",
+      "_DKXzPwaM.js",
+      "_BiC6aMCS.js"
     ],
     "css": [
-      "_app/immutable/assets/3.CQWp5VQc.css"
+      "_app/immutable/assets/3.CUH4LZDp.css"
     ]
   },
-  "_BclygcJX.js": {
-    "file": "_app/immutable/chunks/BclygcJX.js",
-    "name": "index",
+  ".svelte-kit/generated/client-optimized/nodes/4.js": {
+    "file": "_app/immutable/nodes/4.C_B_izp8.js",
+    "name": "nodes/4",
+    "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
+    "isEntry": true,
+    "isDynamicEntry": true,
     "imports": [
-      "_DJddhS0Y.js",
-      "_DdRQWUpj.js"
+      "_BCYp_KQR.js",
+      "_D0EhB6C6.js",
+      "__KAcRfw_.js",
+      "_CqYINF6l.js",
+      "_C-jxBILG.js",
+      "_DKXzPwaM.js",
+      "_BiC6aMCS.js"
+    ],
+    "css": [
+      "_app/immutable/assets/4.CSioaYmI.css"
     ]
   },
-  "_Bij4eJoV.js": {
-    "file": "_app/immutable/chunks/Bij4eJoV.js",
-    "name": "legacy",
-    "imports": [
-      "_DJddhS0Y.js"
-    ]
-  },
-  "_Bo4J9WDE.js": {
-    "file": "_app/immutable/chunks/Bo4J9WDE.js",
-    "name": "disclose-version",
-    "imports": [
-      "_DJddhS0Y.js"
-    ]
-  },
-  "_CizpCxGv.js": {
-    "file": "_app/immutable/chunks/CizpCxGv.js",
-    "name": "index-client",
-    "imports": [
-      "_DJddhS0Y.js"
-    ]
-  },
-  "_DJddhS0Y.js": {
-    "file": "_app/immutable/chunks/DJddhS0Y.js",
-    "name": "runtime"
-  },
-  "_DdRQWUpj.js": {
-    "file": "_app/immutable/chunks/DdRQWUpj.js",
-    "name": "render",
-    "imports": [
-      "_DJddhS0Y.js",
-      "_Bo4J9WDE.js"
-    ]
-  },
-  "_W97eC2eg.js": {
-    "file": "_app/immutable/chunks/W97eC2eg.js",
+  "_4gtB9ieE.js": {
+    "file": "_app/immutable/chunks/4gtB9ieE.js",
     "name": "entry",
     "imports": [
-      "_DJddhS0Y.js",
-      "_CizpCxGv.js"
+      "_CqYINF6l.js",
+      "__KAcRfw_.js"
     ]
   },
-  "_cpcO81Z4.js": {
-    "file": "_app/immutable/chunks/cpcO81Z4.js",
+  "_BCYp_KQR.js": {
+    "file": "_app/immutable/chunks/BCYp_KQR.js",
+    "name": "disclose-version",
+    "imports": [
+      "_CqYINF6l.js"
+    ]
+  },
+  "_BiC6aMCS.js": {
+    "file": "_app/immutable/chunks/BiC6aMCS.js",
+    "name": "index",
+    "imports": [
+      "_CqYINF6l.js",
+      "_C-jxBILG.js"
+    ]
+  },
+  "_C-jxBILG.js": {
+    "file": "_app/immutable/chunks/C-jxBILG.js",
+    "name": "render",
+    "imports": [
+      "_CqYINF6l.js",
+      "_BCYp_KQR.js"
+    ]
+  },
+  "_CqYINF6l.js": {
+    "file": "_app/immutable/chunks/CqYINF6l.js",
+    "name": "runtime"
+  },
+  "_D0EhB6C6.js": {
+    "file": "_app/immutable/chunks/D0EhB6C6.js",
+    "name": "legacy",
+    "imports": [
+      "_CqYINF6l.js"
+    ]
+  },
+  "_DKXzPwaM.js": {
+    "file": "_app/immutable/chunks/DKXzPwaM.js",
     "name": "if",
     "imports": [
-      "_DJddhS0Y.js"
+      "_CqYINF6l.js"
+    ]
+  },
+  "__KAcRfw_.js": {
+    "file": "_app/immutable/chunks/_KAcRfw_.js",
+    "name": "index-client",
+    "imports": [
+      "_CqYINF6l.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.D62vHKgZ.js",
+    "file": "_app/immutable/entry/start.IgeRkQK4.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_W97eC2eg.js"
+      "_4gtB9ieE.js"
     ]
   }
 }
