added countdown, updated final page

--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,169 +1,186 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CmXXzjKQ.js",
+    "file": "_app/immutable/entry/app.mrfCV3HX.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_CqYINF6l.js",
-      "_C-jxBILG.js",
-      "_BCYp_KQR.js",
-      "__KAcRfw_.js",
-      "_DKXzPwaM.js"
+      "_Buz_TUZG.js",
+      "_C27O5WHU.js",
+      "_CqaKyYLO.js",
+      "_BcJ8Okwj.js",
+      "_DSQrjy0b.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
       ".svelte-kit/generated/client-optimized/nodes/1.js",
       ".svelte-kit/generated/client-optimized/nodes/2.js",
       ".svelte-kit/generated/client-optimized/nodes/3.js",
-      ".svelte-kit/generated/client-optimized/nodes/4.js"
+      ".svelte-kit/generated/client-optimized/nodes/4.js",
+      ".svelte-kit/generated/client-optimized/nodes/5.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.Bf2bPG1R.js",
+    "file": "_app/immutable/nodes/0.5a78abHV.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_BCYp_KQR.js",
-      "_CqYINF6l.js"
+      "_CqaKyYLO.js",
+      "_Buz_TUZG.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.BE3YvqDY.js",
+    "file": "_app/immutable/nodes/1.CqRi_PEo.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_BCYp_KQR.js",
-      "_D0EhB6C6.js",
-      "_CqYINF6l.js",
-      "_C-jxBILG.js",
-      "_4gtB9ieE.js"
+      "_CqaKyYLO.js",
+      "_9BIP6oPW.js",
+      "_Buz_TUZG.js",
+      "_C27O5WHU.js",
+      "_2evoCyDu.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.Dj_FtVuO.js",
+    "file": "_app/immutable/nodes/2.C-8CjU-o.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_BCYp_KQR.js",
-      "_D0EhB6C6.js",
-      "__KAcRfw_.js",
-      "_CqYINF6l.js",
-      "_C-jxBILG.js",
-      "_DKXzPwaM.js",
-      "_BiC6aMCS.js",
-      "_4gtB9ieE.js"
+      "_CqaKyYLO.js",
+      "_9BIP6oPW.js",
+      "_BcJ8Okwj.js",
+      "_Buz_TUZG.js",
+      "_C27O5WHU.js",
+      "_DSQrjy0b.js",
+      "_D0eFOEBh.js",
+      "_2evoCyDu.js"
     ],
     "css": [
       "_app/immutable/assets/2.DhLxnOea.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.C2xyQ4KI.js",
+    "file": "_app/immutable/nodes/3.DRQpiPXU.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_BCYp_KQR.js",
-      "_D0EhB6C6.js",
-      "__KAcRfw_.js",
-      "_CqYINF6l.js",
-      "_DKXzPwaM.js",
-      "_BiC6aMCS.js"
+      "_CqaKyYLO.js",
+      "_9BIP6oPW.js",
+      "_BcJ8Okwj.js",
+      "_Buz_TUZG.js",
+      "_DSQrjy0b.js",
+      "_D0eFOEBh.js"
     ],
     "css": [
       "_app/immutable/assets/3.CUH4LZDp.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.C_B_izp8.js",
+    "file": "_app/immutable/nodes/4.Dhs7-Dwn.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_BCYp_KQR.js",
-      "_D0EhB6C6.js",
-      "__KAcRfw_.js",
-      "_CqYINF6l.js",
-      "_C-jxBILG.js",
-      "_DKXzPwaM.js",
-      "_BiC6aMCS.js"
+      "_CqaKyYLO.js",
+      "_9BIP6oPW.js",
+      "_Buz_TUZG.js",
+      "_C27O5WHU.js"
     ],
     "css": [
-      "_app/immutable/assets/4.CSioaYmI.css"
+      "_app/immutable/assets/4.DO1SW9qg.css"
     ]
   },
-  "_4gtB9ieE.js": {
-    "file": "_app/immutable/chunks/4gtB9ieE.js",
+  ".svelte-kit/generated/client-optimized/nodes/5.js": {
+    "file": "_app/immutable/nodes/5.CdLG8Op4.js",
+    "name": "nodes/5",
+    "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_CqaKyYLO.js",
+      "_9BIP6oPW.js",
+      "_BcJ8Okwj.js",
+      "_Buz_TUZG.js",
+      "_C27O5WHU.js",
+      "_DSQrjy0b.js",
+      "_D0eFOEBh.js"
+    ],
+    "css": [
+      "_app/immutable/assets/5.Cu5P8N55.css"
+    ]
+  },
+  "_2evoCyDu.js": {
+    "file": "_app/immutable/chunks/2evoCyDu.js",
     "name": "entry",
     "imports": [
-      "_CqYINF6l.js",
-      "__KAcRfw_.js"
+      "_Buz_TUZG.js",
+      "_BcJ8Okwj.js"
     ]
   },
-  "_BCYp_KQR.js": {
-    "file": "_app/immutable/chunks/BCYp_KQR.js",
-    "name": "disclose-version",
-    "imports": [
-      "_CqYINF6l.js"
-    ]
-  },
-  "_BiC6aMCS.js": {
-    "file": "_app/immutable/chunks/BiC6aMCS.js",
-    "name": "index",
-    "imports": [
-      "_CqYINF6l.js",
-      "_C-jxBILG.js"
-    ]
-  },
-  "_C-jxBILG.js": {
-    "file": "_app/immutable/chunks/C-jxBILG.js",
-    "name": "render",
-    "imports": [
-      "_CqYINF6l.js",
-      "_BCYp_KQR.js"
-    ]
-  },
-  "_CqYINF6l.js": {
-    "file": "_app/immutable/chunks/CqYINF6l.js",
-    "name": "runtime"
-  },
-  "_D0EhB6C6.js": {
-    "file": "_app/immutable/chunks/D0EhB6C6.js",
+  "_9BIP6oPW.js": {
+    "file": "_app/immutable/chunks/9BIP6oPW.js",
     "name": "legacy",
     "imports": [
-      "_CqYINF6l.js"
+      "_Buz_TUZG.js"
     ]
   },
-  "_DKXzPwaM.js": {
-    "file": "_app/immutable/chunks/DKXzPwaM.js",
-    "name": "if",
-    "imports": [
-      "_CqYINF6l.js"
-    ]
-  },
-  "__KAcRfw_.js": {
-    "file": "_app/immutable/chunks/_KAcRfw_.js",
+  "_BcJ8Okwj.js": {
+    "file": "_app/immutable/chunks/BcJ8Okwj.js",
     "name": "index-client",
     "imports": [
-      "_CqYINF6l.js"
+      "_Buz_TUZG.js"
+    ]
+  },
+  "_Buz_TUZG.js": {
+    "file": "_app/immutable/chunks/Buz_TUZG.js",
+    "name": "runtime"
+  },
+  "_C27O5WHU.js": {
+    "file": "_app/immutable/chunks/C27O5WHU.js",
+    "name": "render",
+    "imports": [
+      "_Buz_TUZG.js",
+      "_CqaKyYLO.js"
+    ]
+  },
+  "_CqaKyYLO.js": {
+    "file": "_app/immutable/chunks/CqaKyYLO.js",
+    "name": "disclose-version",
+    "imports": [
+      "_Buz_TUZG.js"
+    ]
+  },
+  "_D0eFOEBh.js": {
+    "file": "_app/immutable/chunks/D0eFOEBh.js",
+    "name": "index",
+    "imports": [
+      "_Buz_TUZG.js",
+      "_C27O5WHU.js"
+    ]
+  },
+  "_DSQrjy0b.js": {
+    "file": "_app/immutable/chunks/DSQrjy0b.js",
+    "name": "if",
+    "imports": [
+      "_Buz_TUZG.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.IgeRkQK4.js",
+    "file": "_app/immutable/entry/start.BF-sgS7B.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_4gtB9ieE.js"
+      "_2evoCyDu.js"
     ]
   }
 }
