updated countdown for mobile devices

--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.mrfCV3HX.js",
+    "file": "_app/immutable/entry/app.CJvZPqFq.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -32,7 +32,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CqRi_PEo.js",
+    "file": "_app/immutable/nodes/1.c1aT-qcE.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,11 +42,11 @@
       "_9BIP6oPW.js",
       "_Buz_TUZG.js",
       "_C27O5WHU.js",
-      "_2evoCyDu.js"
+      "_BKkYadvx.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.C-8CjU-o.js",
+    "file": "_app/immutable/nodes/2.2Xz7Vpi7.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -59,7 +59,7 @@
       "_C27O5WHU.js",
       "_DSQrjy0b.js",
       "_D0eFOEBh.js",
-      "_2evoCyDu.js"
+      "_BKkYadvx.js"
     ],
     "css": [
       "_app/immutable/assets/2.DhLxnOea.css"
@@ -84,7 +84,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.Dhs7-Dwn.js",
+    "file": "_app/immutable/nodes/4.b648RIRF.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -96,7 +96,7 @@
       "_C27O5WHU.js"
     ],
     "css": [
-      "_app/immutable/assets/4.DO1SW9qg.css"
+      "_app/immutable/assets/4.gs8Dd9wG.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
@@ -118,19 +118,19 @@
       "_app/immutable/assets/5.Cu5P8N55.css"
     ]
   },
-  "_2evoCyDu.js": {
-    "file": "_app/immutable/chunks/2evoCyDu.js",
-    "name": "entry",
-    "imports": [
-      "_Buz_TUZG.js",
-      "_BcJ8Okwj.js"
-    ]
-  },
   "_9BIP6oPW.js": {
     "file": "_app/immutable/chunks/9BIP6oPW.js",
     "name": "legacy",
     "imports": [
       "_Buz_TUZG.js"
+    ]
+  },
+  "_BKkYadvx.js": {
+    "file": "_app/immutable/chunks/BKkYadvx.js",
+    "name": "entry",
+    "imports": [
+      "_Buz_TUZG.js",
+      "_BcJ8Okwj.js"
     ]
   },
   "_BcJ8Okwj.js": {
@@ -175,12 +175,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BF-sgS7B.js",
+    "file": "_app/immutable/entry/start.4MOBXeHh.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_2evoCyDu.js"
+      "_BKkYadvx.js"
     ]
   }
 }
