finalized start page

--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,15 +1,15 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CJvZPqFq.js",
+    "file": "_app/immutable/entry/app.DADpcKj2.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
     "imports": [
-      "_Buz_TUZG.js",
-      "_C27O5WHU.js",
-      "_CqaKyYLO.js",
-      "_BcJ8Okwj.js",
-      "_DSQrjy0b.js"
+      "_D1UIiWOc.js",
+      "_Dj3VDq2K.js",
+      "_PQJ0sMdq.js",
+      "_mW9Gk2CS.js",
+      "_B0hHZhQX.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/client-optimized/nodes/0.js",
@@ -21,166 +21,166 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.5a78abHV.js",
+    "file": "_app/immutable/nodes/0.C5xpPdzw.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_CqaKyYLO.js",
-      "_Buz_TUZG.js"
+      "_PQJ0sMdq.js",
+      "_D1UIiWOc.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.c1aT-qcE.js",
+    "file": "_app/immutable/nodes/1.BbBW3bDH.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_CqaKyYLO.js",
-      "_9BIP6oPW.js",
-      "_Buz_TUZG.js",
-      "_C27O5WHU.js",
-      "_BKkYadvx.js"
+      "_PQJ0sMdq.js",
+      "_DVfL5IXX.js",
+      "_D1UIiWOc.js",
+      "_Dj3VDq2K.js",
+      "_DtXoaGmM.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.2Xz7Vpi7.js",
+    "file": "_app/immutable/nodes/2.RKW40qhF.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_CqaKyYLO.js",
-      "_9BIP6oPW.js",
-      "_BcJ8Okwj.js",
-      "_Buz_TUZG.js",
-      "_C27O5WHU.js",
-      "_DSQrjy0b.js",
-      "_D0eFOEBh.js",
-      "_BKkYadvx.js"
+      "_PQJ0sMdq.js",
+      "_DVfL5IXX.js",
+      "_mW9Gk2CS.js",
+      "_D1UIiWOc.js",
+      "_Dj3VDq2K.js",
+      "_B0hHZhQX.js",
+      "_DwiAJise.js",
+      "_DtXoaGmM.js"
     ],
     "css": [
       "_app/immutable/assets/2.DhLxnOea.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.DRQpiPXU.js",
+    "file": "_app/immutable/nodes/3.YTMHmbPF.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_CqaKyYLO.js",
-      "_9BIP6oPW.js",
-      "_BcJ8Okwj.js",
-      "_Buz_TUZG.js",
-      "_DSQrjy0b.js",
-      "_D0eFOEBh.js"
+      "_PQJ0sMdq.js",
+      "_DVfL5IXX.js",
+      "_mW9Gk2CS.js",
+      "_D1UIiWOc.js",
+      "_B0hHZhQX.js",
+      "_DwiAJise.js"
     ],
     "css": [
-      "_app/immutable/assets/3.CUH4LZDp.css"
+      "_app/immutable/assets/3.BdSrcGGN.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.b648RIRF.js",
+    "file": "_app/immutable/nodes/4.D6DHcqYt.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_CqaKyYLO.js",
-      "_9BIP6oPW.js",
-      "_Buz_TUZG.js",
-      "_C27O5WHU.js"
+      "_PQJ0sMdq.js",
+      "_DVfL5IXX.js",
+      "_D1UIiWOc.js",
+      "_Dj3VDq2K.js"
     ],
     "css": [
       "_app/immutable/assets/4.gs8Dd9wG.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
-    "file": "_app/immutable/nodes/5.CdLG8Op4.js",
+    "file": "_app/immutable/nodes/5.mHW92AQM.js",
     "name": "nodes/5",
     "src": ".svelte-kit/generated/client-optimized/nodes/5.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_CqaKyYLO.js",
-      "_9BIP6oPW.js",
-      "_BcJ8Okwj.js",
-      "_Buz_TUZG.js",
-      "_C27O5WHU.js",
-      "_DSQrjy0b.js",
-      "_D0eFOEBh.js"
+      "_PQJ0sMdq.js",
+      "_DVfL5IXX.js",
+      "_mW9Gk2CS.js",
+      "_D1UIiWOc.js",
+      "_Dj3VDq2K.js",
+      "_B0hHZhQX.js",
+      "_DwiAJise.js"
     ],
     "css": [
       "_app/immutable/assets/5.Cu5P8N55.css"
     ]
   },
-  "_9BIP6oPW.js": {
-    "file": "_app/immutable/chunks/9BIP6oPW.js",
-    "name": "legacy",
-    "imports": [
-      "_Buz_TUZG.js"
-    ]
-  },
-  "_BKkYadvx.js": {
-    "file": "_app/immutable/chunks/BKkYadvx.js",
-    "name": "entry",
-    "imports": [
-      "_Buz_TUZG.js",
-      "_BcJ8Okwj.js"
-    ]
-  },
-  "_BcJ8Okwj.js": {
-    "file": "_app/immutable/chunks/BcJ8Okwj.js",
-    "name": "index-client",
-    "imports": [
-      "_Buz_TUZG.js"
-    ]
-  },
-  "_Buz_TUZG.js": {
-    "file": "_app/immutable/chunks/Buz_TUZG.js",
-    "name": "runtime"
-  },
-  "_C27O5WHU.js": {
-    "file": "_app/immutable/chunks/C27O5WHU.js",
-    "name": "render",
-    "imports": [
-      "_Buz_TUZG.js",
-      "_CqaKyYLO.js"
-    ]
-  },
-  "_CqaKyYLO.js": {
-    "file": "_app/immutable/chunks/CqaKyYLO.js",
-    "name": "disclose-version",
-    "imports": [
-      "_Buz_TUZG.js"
-    ]
-  },
-  "_D0eFOEBh.js": {
-    "file": "_app/immutable/chunks/D0eFOEBh.js",
-    "name": "index",
-    "imports": [
-      "_Buz_TUZG.js",
-      "_C27O5WHU.js"
-    ]
-  },
-  "_DSQrjy0b.js": {
-    "file": "_app/immutable/chunks/DSQrjy0b.js",
+  "_B0hHZhQX.js": {
+    "file": "_app/immutable/chunks/B0hHZhQX.js",
     "name": "if",
     "imports": [
-      "_Buz_TUZG.js"
+      "_D1UIiWOc.js"
+    ]
+  },
+  "_D1UIiWOc.js": {
+    "file": "_app/immutable/chunks/D1UIiWOc.js",
+    "name": "runtime"
+  },
+  "_DVfL5IXX.js": {
+    "file": "_app/immutable/chunks/DVfL5IXX.js",
+    "name": "legacy",
+    "imports": [
+      "_D1UIiWOc.js"
+    ]
+  },
+  "_Dj3VDq2K.js": {
+    "file": "_app/immutable/chunks/Dj3VDq2K.js",
+    "name": "render",
+    "imports": [
+      "_D1UIiWOc.js",
+      "_PQJ0sMdq.js"
+    ]
+  },
+  "_DtXoaGmM.js": {
+    "file": "_app/immutable/chunks/DtXoaGmM.js",
+    "name": "entry",
+    "imports": [
+      "_D1UIiWOc.js",
+      "_mW9Gk2CS.js"
+    ]
+  },
+  "_DwiAJise.js": {
+    "file": "_app/immutable/chunks/DwiAJise.js",
+    "name": "index",
+    "imports": [
+      "_D1UIiWOc.js",
+      "_Dj3VDq2K.js"
+    ]
+  },
+  "_PQJ0sMdq.js": {
+    "file": "_app/immutable/chunks/PQJ0sMdq.js",
+    "name": "disclose-version",
+    "imports": [
+      "_D1UIiWOc.js"
+    ]
+  },
+  "_mW9Gk2CS.js": {
+    "file": "_app/immutable/chunks/mW9Gk2CS.js",
+    "name": "index-client",
+    "imports": [
+      "_D1UIiWOc.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.4MOBXeHh.js",
+    "file": "_app/immutable/entry/start.DpCUrhLr.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_BKkYadvx.js"
+      "_DtXoaGmM.js"
     ]
   }
 }
